// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<search /> should render 1`] = `
<div>
  <div
    class="section-white shadow-bottom search-widget"
  >
    <div
      class="container"
    >
      <div
        class="search"
        style="padding: 1em 0px;"
      >
        <header>
          <h1
            class="no-margin"
          >
            Posez votre question sur le droit du travail
          </h1>
          <br />
        </header>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="select-sources__icon"
                viewBox="0 0 49 49"
              >
                <title>
                  Icône réponse
                </title>
                <g
                  fill-rule="evenodd"
                >
                  <path
                    d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                    fill="currentColor"
                  />
                  <path
                    d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                    fill="currentColor"
                  />
                  <path
                    d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <select
                class="select-sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="sc-bxivhb RULfe"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value=""
                />
                <div
                  class="sc-ifAKCX cggTaJ"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                />
              </div>
            </label>
          </div>
          <button
            class="btn"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<search /> should render suggestions 1`] = `
<div>
  <div
    class="section-white shadow-bottom search-widget"
  >
    <div
      class="container"
    >
      <div
        class="search"
        style="padding: 1em 0px;"
      >
        <header>
          <h1
            class="no-margin"
          >
            Posez votre question sur le droit du travail
          </h1>
          <br />
        </header>
        <form
          class="search__form"
        >
          <div
            class="search__fields"
          >
            <svg
              class="search__input__icon"
              viewBox="0 0 20 20"
            >
              <title />
              <path
                d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <label
              class="search__sources"
              for="contentSource"
            >
              <span
                class="hidden"
              >
                Filtrer par type de contenu
              </span>
              <svg
                class="select-sources__icon"
                viewBox="0 0 49 49"
              >
                <title>
                  Icône réponse
                </title>
                <g
                  fill-rule="evenodd"
                >
                  <path
                    d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                    fill="currentColor"
                  />
                  <path
                    d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                    fill="currentColor"
                  />
                  <path
                    d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <select
                class="select-sources__value"
                id="contentSource"
                name="source"
              >
                <option
                  value=""
                >
                  Tous contenus
                </option>
                <option
                  value="faq"
                >
                  Réponses
                </option>
                <option
                  value="code_du_travail"
                >
                  Code du travail
                </option>
                <option
                  value="fiches"
                >
                  Fiches
                </option>
                <option
                  value="modeles_de_courriers"
                >
                  Modèles
                </option>
                <option
                  value="outils"
                >
                  Outils
                </option>
                <option
                  value="annuaire"
                >
                  Annuaire
                </option>
              </select>
            </label>
            <label
              class="sc-bxivhb RULfe"
              for="main-search-input"
            >
              <span
                class="hidden"
              >
                Rechercher
              </span>
              <div
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-cdtn-documents-suggester"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-cdtn-documents-suggester"
                  autocomplete="off"
                  class="search__input"
                  id="main-search-input"
                  name="query"
                  placeholder="Recherche"
                  type="search"
                  value="yolo"
                />
                <div
                  class="sc-ifAKCX cggTaJ"
                  id="react-autowhatever-cdtn-documents-suggester"
                  role="listbox"
                >
                  <ul
                    role="listbox"
                    style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
                  >
                    <li
                      aria-selected="false"
                      data-suggestion-index="0"
                      id="react-autowhatever-cdtn-documents-suggester--item-0"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="sc-htpNat eOQrvi"
                      >
                        <div
                          class="sc-dnqmqq hGVYee"
                        >
                          foo
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="1"
                      id="react-autowhatever-cdtn-documents-suggester--item-1"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="sc-htpNat eOQrvi"
                      >
                        <div
                          class="sc-iwsKbI jgobZJ"
                        >
                          foobar
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="2"
                      id="react-autowhatever-cdtn-documents-suggester--item-2"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="sc-htpNat eOQrvi"
                      >
                        <div
                          class="sc-gZMcBi hoWdQb"
                        >
                          foo bar ?
                        </div>
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      data-suggestion-index="3"
                      id="react-autowhatever-cdtn-documents-suggester--item-3"
                      role="option"
                      style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                    >
                      <div
                        class="sc-htpNat eOQrvi"
                      >
                        <div
                          class="sc-gqjmRU khzSsa"
                        >
                          foo bazzz
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </label>
          </div>
          <button
            class="btn"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
